# ai-news-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  news-agent.dot  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
configs/: agent-config.schema.json  default-agent.yaml  example-anthropic-agent.yaml  example-developer-agent.yaml  example-minimal-agent.yaml  example-policy-agent.yaml  example-technical-agent.yaml  scheduler.schema.json  scheduler.yaml
docs/: architecture.md  development.md  user-guide.md  working-brief.md
docs/config/: config-reference.md
docs/deployment/: deployment-guide.md  secrets-management.md
docs/operations/: quality-monitoring.md  reliability.md
docs/requirements/: backlog.md  implementation-plan.md  requirements.md  spec.md
outputs/: .gitkeep
prompts/: annual.md  daily.md  monthly.md  prompt_hashes.json  weekly.md
prompts/developer/: annual.md  daily.md  monthly.md  weekly.md
scripts/: dry_run.sh
src/ai_news_agent/: __init__.py  pipeline.py
src/ai_news_agent/config/: __init__.py  loader.py  models.py  schema.py
src/ai_news_agent/curation/: __init__.py  agent.py  prompt_builder.py  scorer.py
src/ai_news_agent/llm/: __init__.py  anthropic_client.py  base.py  factory.py  google_client.py  openai_client.py  retry.py  search_tools.py
src/ai_news_agent/portal/: __init__.py  app.py  routes.py
src/ai_news_agent/portal/static/css/: app.css
src/ai_news_agent/portal/static/js/: app.js
src/ai_news_agent/portal/templates/: annual.html  base.html  daily.html  index.html  monthly.html  weekly.html
src/ai_news_agent/rendering/: __init__.py  agent.py  html_renderer.py  impact_tags.py  json_renderer.py  markdown_renderer.py  utils.py
src/ai_news_agent/scheduler/: __init__.py  auth.py  runner.py  serverless.py  windows.py
src/ai_news_agent/sourcing/: __init__.py  agent.py  twitter_fetcher.py  web_fetcher.py
src/ai_news_agent/storage/: __init__.py  base.py  factory.py  models.py  sqlite_store.py  tinydb_store.py
src/ai_news_agent/twitter/: __init__.py  client.py
tests/: conftest.py
tests/ci/: __init__.py  test_smoke_assertions.py
tests/integration/: __init__.py  test_fixture_corpus.py  test_pipeline_e2e.py  test_pipeline_smoke.py
tests/unit/: __init__.py  test_cli_entrypoints.py  test_config.py  test_config_system.py  test_curation.py  test_curation_agent.py  test_llm_base.py  test_llm_layer.py  test_llm_providers.py  test_pipeline_sourcing_window.py  test_portal.py  test_prompts.py  test_rendering.py  test_rendering_agent.py  test_scheduler.py  test_search_tools.py  test_sourcing.py  test_storage.py  test_twitter.py  test_twitter_integration.py
